--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,11 @@ body {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
   margin:  5%;
-  color: #FEF2BF;
+  color: white;
 }
 
 .container {
-  display: block;
+  display:block;
   width: 50%;
   margin: auto;
 
